# cplusedition-desktop-ce

./: .gitignore  LICENSE  NOTICE  README.md  build.gradle  gradle.properties
ROOT/: changeit.txt
ROOT/assets/config/: assets.json  fontawesome.css  fonts.json  templates.json
ROOT/assets/fonts/intel/: METADATA.json
ROOT/assets/js/: c.js  cssparser.js  cssparser.js.map  index.js  index.js.map  m.js  m.js.map  preload.js  preload.js.map  r.js  servlet.js  servlet.js.map  shared.js  shared.js.map
ROOT/assets/js/andrians/: datetime.js  datetime.js.map
ROOT/assets/js/bot/: botcore.js  botcore.js.map  botdombuilder.js  botdombuilder.js.map  botnode.js  botnode.js.map
ROOT/assets/js/bot-electron/: etut.js  etut.js.map
ROOT/assets/js/common/: consts.js  (+3 more)
ROOT/assets/licenses/: NOTICE.html
js/: c.js
scripts/: client.sh  debug.sh  landscape.sh  portrait.sh  restart.sh  shutdown-all.sh  shutdown.sh  start.sh  update.sh
ts/: tsconfig-base.json  tsconfig.json
ts/src/: cssparser.js  index.ts  m.ts  preload.ts  servlet.ts  shared.ts
ts/src/andrians/: datetime.ts
ts/src/bot/: botcore.ts  botdombuilder.ts  botnode.ts  bottest.ts
ts/src/bot-electron/: etut.ts
ts/src/common/: consts.ts  utils.ts
ts/src/pdfviewer/: index.ts
unixsocket-cc/: .gitignore  LICENSE  NOTICE  configure.ac
unixsocket-cc/jni/sf/unixsocket/: TimedInputStream.h  UnixClientSocket.h  UnixServerSocket.h  UnixSocket.h
unixsocket-cc/junixsocket/: README.txt
unixsocket-cc/scripts/: rebuild.sh  reconfig.sh
unixsocket-cc/src/: Makefile.am  UnixSocket.c  UnixSocket.h  config.h.in
(+1221 files in other folders)
